--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
         <h2.version>1.4.199</h2.version>
         <hibernate.ehcache.version>5.4.2.Final</hibernate.ehcache.version>
         <hibernate.validator.version>6.0.17.Final</hibernate.validator.version>
+        <jacoco.report.agent.file>${project.build.directory}/jacoco.exec</jacoco.report.agent.file>
+        <jacoco.version>0.8.7</jacoco.version>
         <jakarta.activation.version>1.2.1</jakarta.activation.version>
         <jasypt.spring.boot.starter.version>2.1.2</jasypt.spring.boot.starter.version>
         <java.version>1.11</java.version>
@@ -234,7 +236,7 @@
                 <version>${maven.surefire.version}</version>
                 <configuration>
                     <argLine>
-                        --illegal-access=permit
+                     --illegal-access=permit
                     </argLine>
                 </configuration>
             </plugin>
@@ -281,6 +283,108 @@
 
     <profiles>
         <profile>
+            <id>generate-coverage</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <!-- JUnit 5 requires Surefire version 2.22.1 or higher -->
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.version}</version>
+                        <configuration>
+                            <argLine>
+                                jaCoCoArgLine -Xmx4024m --illegal-access=permit
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>${jacoco.version}</version>
+                        <executions>
+                            <execution>
+                                <id>pre-unit-test</id>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                                <configuration>
+                                    <propertyName>jaCoCoArgLine</propertyName>
+                                    <destFile>${jacoco.report.agent.file}</destFile>
+                                    <append>true</append>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>post-unit-test</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                                <configuration>
+                                    <dataFile>${jacoco.report.agent.file}</dataFile>
+                                    <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>coverage-check</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <!-- JUnit 5 requires Surefire version 2.22.1 or higher -->
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.version}</version>
+                        <configuration>
+                            <argLine>
+                                jaCoCoArgLine -Xmx4024m --illegal-access=permit
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>${jacoco.version}</version>
+                        <executions>
+                            <execution>
+                                <id>jacoco-check</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                                <configuration>
+                                    <dataFile>${jacoco.report.agent.file}</dataFile>
+                                    <rules>
+                                        <rule>
+                                            <element>BUNDLE</element>
+                                            <excludes>
+                                                <exclude>*Test</exclude>
+                                                <exclude>*IT</exclude>
+                                            </excludes>
+                                            <limits>
+                                                <limit>
+                                                    <counter>INSTRUCTION</counter>
+                                                    <value>COVEREDRATIO</value>
+                                                    <minimum>70%</minimum>
+                                                </limit>
+                                            </limits>
+                                        </rule>
+                                    </rules>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>integrationtests</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
@@ -309,7 +413,7 @@
                                 <additionalClasspathElement>${project.build.outputDirectory}</additionalClasspathElement>
                             </additionalClasspathElements>
                             <argLine>
-                                --illegal-access=permit
+                             --illegal-access=permit
                             </argLine>
                             <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                         </configuration>
@@ -321,7 +425,7 @@
                         <version>${maven.surefire.version}</version>
                         <configuration>
                             <argLine>
-                                --illegal-access=permit
+                              --illegal-access=permit
                             </argLine>
                             <skipTests>true</skipTests>
                         </configuration>
