--- a/service/src/test/resources/test/application.properties
+++ b/service/src/test/resources/test/application.properties
@@ -18,8 +18,9 @@ api.version=1
 springdoc.api-docs.path=/v1/OpenBankAPI
 springdoc.swagger-ui.path=/swagger-ui.html
 spring.flyway.enabled=false
-logging.level.root=INFO
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate=ERROR
-logging.level.com.howtoprogram=DEBUG
+spring.main.banner-mode=off
+logging.level.root=off
+logging.level.org.springframework.web=off
+logging.level.org.hibernate=off
+logging.level.com.howtoprogram=off
 spring.main.allow-bean-definition-overriding=true
