Improved logging and forced basic auth
Improved logging to be able log info level, debug level and
error level efficiently by interceptor aspect.

Added basic authentication implementation for all HTTPS REST
endpoints.

Refactored system tests to use common Spring Boot 2 test setup.

Updated and system/integration test for HTTPS calls to use
x-authorization basic authentication header setup.

Added resource test by test HTTPS REST endpoints by verifying the
info, debug and exception error level is logged correctly with
related client name and correlation id.

Cleaned up unnecessary logger imports.

--- a/service/src/main/resources/configuration_local.yaml
+++ b/service/src/main/resources/configuration_local.yaml
@@ -35,3 +35,10 @@ management.endpoints:
     exposure.include: 'shallowhealth,deephealth,metrics,prometheus'
 
 management.metrics.export.prometheus.enabled: true
+
+service:
+  basic:
+    auth:
+      map:
+        client1:
+          token: 'password1,password2'
