--- a/service/src/test/resources/test/application.properties
+++ b/service/src/test/resources/test/application.properties
@@ -24,3 +24,5 @@ logging.level.org.springframework.web=off
 logging.level.org.hibernate=off
 logging.level.com.howtoprogram=off
 spring.main.allow-bean-definition-overriding=true
+
+service.basic.auth.map.client1.token=password1,password2
