--- a/service/src/main/resources/configuration_prod.yaml
+++ b/service/src/main/resources/configuration_prod.yaml
@@ -35,3 +35,10 @@ management.endpoints:
     exposure.include: 'shallowhealth,deephealth,metrics,prometheus'
 
 management.metrics.export.prometheus.enabled: true
+
+service:
+  basic:
+    auth:
+      map:
+        client1:
+          token: 'password1,password2'
