Execute the test impact analysis in parallel
Execute the test impact analysis recursion logic in parallel instead
of sequential execution.

--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ jobs:
     - stage: run unit/system tests based on test impact analysis validation
       script:
         - mvn clean install -T 1C -DskipTests
-        - mvn $(./test_impact_analysis.sh master "${TRAVIS_BRANCH}" se.jsquad) -pl service
+        - mvn $(./test_impact_analysis.sh "origin/master" "origin/${TRAVIS_BRANCH}" se.jsquad) -pl service
     - stage: build and run unit/system tests with full code coverage verification
       script:
         - travis_wait 60 mvn clean verify -T 1C -Pgenerate-unit-coverage,generate-report
