Updated Kubernetes test configuration
Updated kubernetes test configuration for health check logic script
so the integration tests can be executed as usual.

Optimized some integration test Java class with package level.

Removed x-authorization header parameter for REST health check calls.

Optimized imports of some Java classes to include the hole psackage
level.

Updated Bash shebang for increased portability for some of the Bash
scripts.

Updated Dockerfile and Docker Compose files to use Bash instead of
Shell for OpenBank Spring Boot image.

Updated ingress-nginx manifest setup to support newer ingress-nginx
container image included in updated k3dcontainer.

--- a/deployment/12_ingress.yaml
+++ b/deployment/12_ingress.yaml
@@ -15,7 +15,7 @@
 #
 
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: openbank-ingress-https
@@ -28,11 +28,14 @@ spec:
     - http:
         paths:
           - path: /api
+            pathType: Prefix
             backend:
-              serviceName: openbank-spring-service
-              servicePort: 8443
+              service:
+                name: openbank-spring-service
+                port:
+                  number: 8443
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: openbank-ingress-http
@@ -44,6 +47,9 @@ spec:
     - http:
         paths:
           - path: /actuator
+            pathType: Prefix
             backend:
-              serviceName: openbank-spring-service
-              servicePort: 8081
+              service:
+                name: openbank-spring-service
+                port:
+                  number: 8081
