--- a/service/docker-compose-pipeline.yaml
+++ b/service/docker-compose-pipeline.yaml
@@ -106,7 +106,7 @@ services:
       - 8443:8443
       - 8081:8081
     healthcheck:
-      test: ["CMD-SHELL", "sh -c 'echo ready || exit 1'"]
+      test: ["CMD-SHELL", "bash -c 'echo ready || exit 1'"]
       interval: 10s
       timeout: 10s
       retries: 5
