--- a/service/src/test/resources/test/application.properties
+++ b/service/src/test/resources/test/application.properties
@@ -26,3 +26,6 @@ logging.level.com.howtoprogram=off
 spring.main.allow-bean-definition-overriding=true
 
 service.basic.auth.map.client1.token=password1,password2
+
+jasypt.encryptor.algorithm=PBEWithMD5AndDES
+jasypt.encryptor.iv-generator-classname=org.jasypt.iv.NoIvGenerator
