--- a/.travis.yml
+++ b/.travis.yml
@@ -51,9 +51,7 @@ before_install:
   - sudo apt-get install kubectl=1.20.1-00 -y
   - curl https://baltocdn.com/helm/signing.asc | sudo apt-key add -
   - sudo apt-get install apt-transport-https --yes
-  - echo "deb https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
-  - sudo apt-get update
-  - sudo apt-get install helm -y
+  - curl -fsSL -o get_helm.sh "https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3" && chmod 700 get_helm.sh && ./get_helm.sh
   - sudo apt-get install apt-transport-https ca-certificates curl gnupg-agent software-properties-common wget -y
   - docker --version
   - docker run hello-world
