--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -22,5 +22,5 @@ logging.level.root=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
 logging.level.com.howtoprogram=DEBUG
-jasypt.encryptor.algorithm=PBEWithMD5AndDES
-jasypt.encryptor.iv-generator-classname=org.jasypt.iv.NoIvGenerator
+jasypt.encryptor.algorithm=PBEWITHHMACSHA512ANDAES_256
+jasypt.encryptor.iv-generator-classname=org.jasypt.iv.RandomIvGenerator
