--- a/service/src/test/resources/test/application.properties
+++ b/service/src/test/resources/test/application.properties
@@ -27,5 +27,5 @@ spring.main.allow-bean-definition-overriding=true
 
 service.basic.auth.map.client1.token=password1,password2
 
-jasypt.encryptor.algorithm=PBEWithMD5AndDES
-jasypt.encryptor.iv-generator-classname=org.jasypt.iv.NoIvGenerator
+jasypt.encryptor.algorithm=PBEWITHHMACSHA512ANDAES_256
+jasypt.encryptor.iv-generator-classname=org.jasypt.iv.RandomIvGenerator
